# Nexus-Knowledge-Operating-System

./: .gitignore  01_GL_ALIASES.md  02_VIRTUALBOX_FIX.md  PROJECT_CONSTITUTION.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: graph.rs  health.rs  import.rs  mod.rs  search.rs
backend/src/engine/: import.rs  mock.rs  mod.rs  pipeline.rs  provider.rs  types.rs
backend/src/storage/: mod.rs
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: sample-knowledge-ar.txt  sample-knowledge.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: CommandPalette.tsx  GraphCanvas.tsx  Inspector.tsx  Sidebar.tsx  TasksBar.tsx  Tutorial.tsx
frontend/src/components/nodes/: KosNode.tsx
frontend/src/i18n/: index.ts  useTranslation.ts
frontend/src/lib/: graphUtils.ts
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
